src/objects/CBBudgetLine__c.object
<CustomObject>
    <fields>
        <fullName>APAheadTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle this field to go forward by an approval process</description>
        <label>AP Ahead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APBackTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle this field to go back by an approval process</description>
        <label>AP Back Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APHaveAccessToAhead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User or public group that have access to forward the status</description>
        <label>AP Have Access To Ahead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APHaveAccessToBack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User or public group what have access to back status</description>
        <label>AP Have Access To Back</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APNextStatusName__c</fullName>
        <defaultValue>&apos;Submit&apos;</defaultValue>
        <label>AP Next Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPreviousStatusName__c</fullName>
        <label>AP Previous Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buttontitle__c</fullName>
        <label>Button title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBAccountSign__c</fullName>
        <formula>TEXT(CBAccount__r.CBAccountType__r.Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBAccountType__c</fullName>
        <formula>CBAccount__r.CBAccountType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBCalculationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Calculation Rule</label>
        <referenceTo>CBCalculationRule__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBDivisionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBOwnerName__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>CBScenario__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBSubAccountName__c</fullName>
        <formula>CBAccount__r.CBSubAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Account Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DrillDownIds__c</fullName>
        <label>Drill Down Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <label>Lock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Editing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NFL1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 1</label>
        <referenceTo>CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 2</label>
        <referenceTo>CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Non-Financial Library 3</label>
        <referenceTo>CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>CBBudgetLines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFLFormula__c</fullName>
        <label>NFL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a parent budget line</description>
        <inlineHelpText>Lookup to a parent budget line</inlineHelpText>
        <label>Parent Budget Line</label>
        <referenceTo>CBBudgetLine__c</referenceTo>
        <relationshipLabel>CB Budget Lines</relationshipLabel>
        <relationshipName>ChildrenBudgetLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Open&apos;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CB_Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WarningMessage__c</fullName>
        <label>Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAllocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the budget line is allocated to simple lines</description>
        <inlineHelpText>True if the budget line is allocated to simple lines</inlineHelpText>
        <label>Is Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFormulaBudgetLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is budget line is complex</description>
        <label>Is Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTopdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is the current budget line is topdown sum</description>
        <inlineHelpText>True is the current budget line is topdown sum</inlineHelpText>
        <label>is Topdown</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Budget Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lock__c</columns>
        <columns>CBBudgetYear__c</columns>
        <columns>CBAccount__c</columns>
        <columns>CBDivision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Budget Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>